Changelog
=========

4.6.1 (unreleased)
------------------

- Nothing changed yet.


4.6.0 (2017-08-18)
------------------

- Update to CKEditor 4.7.2
  [gotcha]


4.5.0 (2017-02-24)
------------------

- Add a setting for CKEditor skin: colored or flat buttons

  Default skin remains Moonocolor, colored buttons.
  Flat buttons comes from the new Moono-lisa skin (see http://ckeditor.com/addon/moono-lisa)
  [gotcha]

  To avoid ugly border-bottom on buttons in default Plone 4 skin: add the
  following style to your CSS::

      #content a.cke_button {
          border-bottom: 0;
      }

      #content a.cke_button:hover {
          border-bottom: #ccc 0.1em solid;
      }

- Update to CKEditor 4.6.2
  [gotcha]


4.4.5 (2016-11-23)
------------------

- ``nonbreaking`` plugin: used to insert non breaking spaces and hyphens.
  [gotcha]


4.4.4 (2016-05-02)
------------------

- Fix overloading settings: it should be empty dict rather than None
  [gotcha]


4.4.3 (2016-05-02)
------------------

- Enable settings overloading for formlib wysiwyg widget
  [gotcha]


4.4.2 (2016-04-13)
------------------

- Fix customization per widget of filexxxBrowserUrl, depending on language
  [gotcha]


4.4.1 (2016-04-13)
------------------

- Enable settings overloading for plone.app.z3cform wysiwyg widget
  [gotcha]

- Enable customization per widget of filexxxBrowserUrl, depending on language
  [gotcha]

4.4.0 (2016-03-11)
------------------

- Store custom toolbars in registry.
  (With previous change, enable different toolbars per widget)
  [gotcha]

- Improve settings overloading per widget
  [gotcha]

- Load js only if you are an authenticated user.
  [bsuttor]


4.3.5 (2016-02-16)
------------------

- Fix image preview in ckeditor when clicking on main image in pop-pup window.
  [boulch]
  
4.3.4 (2016-01-21)
------------------

- Fix context of ckeditor_plone_config.js
  when called by plone.app.form.widgets.wysiwygwidget
  when adding a portlet.
  [gotcha]

